# ud-mlops-demo

./: Makefile
demo_app/: pyproject.toml
