[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["casierrav <jerarquia04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xgboost = "^2.0.3"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
click = "^8.1.7"
scikit-learn = "^1.4.2"
dill = "^0.3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pylint = "^3.1.0"
black = "^24.4.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
